[gd_scene load_steps=3 format=2]

[ext_resource path="res://ui/CreateSession.gd" type="Script" id=1]
[ext_resource path="res://default_theme.tres" type="Theme" id=2]

[node name="CreateSession" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
theme = ExtResource( 2 )
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -72.5
margin_top = -24.0
margin_right = 72.5
margin_bottom = 24.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer"]
margin_right = 145.0
margin_bottom = 19.0
alignment = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="VBoxContainer/HBoxContainer"]
margin_left = 50.0
margin_top = 5.0
margin_right = 69.0
margin_bottom = 14.0
text = "Name:"

[node name="NameText" type="LineEdit" parent="VBoxContainer/HBoxContainer"]
margin_left = 73.0
margin_right = 95.0
margin_bottom = 19.0
expand_to_text_length = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HostButton" type="Button" parent="VBoxContainer"]
margin_top = 23.0
margin_right = 145.0
margin_bottom = 38.0
text = "Host Session"

[node name="HBoxContainer2" type="HBoxContainer" parent="VBoxContainer"]
margin_top = 42.0
margin_right = 145.0
margin_bottom = 61.0

[node name="SessionName" type="LineEdit" parent="VBoxContainer/HBoxContainer2"]
margin_right = 50.0
margin_bottom = 19.0
rect_min_size = Vector2( 50, 0 )

[node name="JoinButton" type="Button" parent="VBoxContainer/HBoxContainer2"]
margin_left = 54.0
margin_right = 145.0
margin_bottom = 19.0
size_flags_horizontal = 3
text = "Join Session"

[connection signal="pressed" from="VBoxContainer/HostButton" to="." method="_on_HostButton_pressed"]
[connection signal="pressed" from="VBoxContainer/HBoxContainer2/JoinButton" to="." method="_on_JoinButton_pressed"]
